# reddit-idea-miner

./: .env.example  .gitignore  README.md  app.py  mypy.ini  pyproject.toml  ruff.toml
launchd/: README.md  com.reddit-miner.daily.plist  com.reddit-miner.weekly.plist
reddit_miner/: __main__.py  alert.py  cluster.py  competitor.py  config.py  dashboard.py  db.py  embed.py  ingest.py  label.py  logging_setup.py  models.py  pipeline.py  reduce.py
tests/: conftest.py  test_alert.py  test_cluster.py  test_competitor.py  test_dashboard.py  test_db.py  test_embed.py  test_ingest.py  test_reduce.py  test_smoke.py
