[project]
name = "reddit-idea-miner"
version = "0.1.0"
description = "Mine vertical subreddits for unmet-demand signals."
requires-python = ">=3.11,<3.13"
dependencies = [
    "praw>=7.7",
    "sentence-transformers>=2.7",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "joblib>=1.3",
    "vaderSentiment>=3.3.2",
    "streamlit>=1.32",
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
reddit-miner = "reddit_miner.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reddit_miner"]
